--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <div class="poster">
-      <img src="../assets/images/Dark Knight.jpg" id="im" />
+      <img src="./assets/images/Dark Knight.jpg" id="im" />
       <h1>The Dark Knight</h1>
       <p>
         Your anger gives you great power. But if you let it, it will destroy
